[gd_scene load_steps=11 format=3 uid="uid://bukxg53vu3nwi"]

[ext_resource type="Texture2D" uid="uid://cyfwc526qpkv3" path="res://resources/crosshair23.png" id="1_8fisi"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_gtcwm"]
[ext_resource type="Texture2D" uid="uid://b01gpvoauj5k6" path="res://resources/help_icon.png" id="3_cmojc"]
[ext_resource type="Texture2D" uid="uid://bxgp1k2cu3j4p" path="res://resources/help_icon_hover.png" id="4_tphr2"]
[ext_resource type="Texture2D" uid="uid://0tenmwh5qhrc" path="res://resources/about_icon.png" id="5_xjp3p"]
[ext_resource type="Texture2D" uid="uid://l2jbuejap7v4" path="res://resources/about_icon_hover.png" id="6_hdou2"]
[ext_resource type="Texture2D" uid="uid://7ie35pp2pnph" path="res://resources/apple_arrow.png" id="7_u4evl"]
[ext_resource type="Texture2D" uid="uid://beg3yp4g2f01" path="res://resources/heart_full_2.png" id="8_11by5"]
[ext_resource type="Texture2D" uid="uid://kwf8473so2yl" path="res://resources/start_icon.png" id="9_5qqko"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wavjg"]
radius = 50.0

[node name="HUD" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_gtcwm")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 55.0
offset_top = 54.0
offset_right = 203.0
offset_bottom = 111.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="Crosshair23" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(2, 2)
texture = ExtResource("1_8fisi")

[node name="BodyLabel" type="Label" parent="."]
offset_left = 55.0
offset_top = 143.0
offset_right = 274.0
offset_bottom = 188.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "Body length: 1"

[node name="SpeedChange" type="ColorRect" parent="."]
offset_left = 39.0
offset_top = 375.0
offset_right = 527.0
offset_bottom = 452.0
scale = Vector2(1.3, 1.3)

[node name="ColorRect" type="ColorRect" parent="SpeedChange"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 482.0
offset_bottom = 71.0
color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="SpeedSlider" type="HSlider" parent="SpeedChange"]
layout_mode = 0
offset_left = 23.0
offset_top = 17.0
offset_right = 472.0
offset_bottom = 33.0
min_value = 30.0
max_value = 300.0
value = 80.0

[node name="Label" type="Label" parent="SpeedChange"]
layout_mode = 0
offset_left = 21.0
offset_top = 38.0
offset_right = 48.0
offset_bottom = 87.0
text = "30

"

[node name="Label2" type="Label" parent="SpeedChange"]
layout_mode = 0
offset_left = 450.0
offset_top = 33.0
offset_right = 478.0
offset_bottom = 56.0
text = "300"

[node name="Label3" type="Label" parent="SpeedChange"]
layout_mode = 0
offset_left = 122.0
offset_top = 39.0
offset_right = 272.0
offset_bottom = 62.0
text = "Accelerated speed: 80"

[node name="HelpButton" type="TextureButton" parent="."]
offset_left = 55.0
offset_top = 236.0
offset_right = 106.0
offset_bottom = 287.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_cmojc")
texture_hover = ExtResource("4_tphr2")

[node name="AboutButton" type="TextureButton" parent="."]
offset_left = 196.0
offset_top = 236.0
offset_right = 248.0
offset_bottom = 288.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_xjp3p")
texture_hover = ExtResource("6_hdou2")

[node name="ArrowPivot" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="AppleArrow" type="Sprite2D" parent="ArrowPivot"]
texture = ExtResource("7_u4evl")
centered = false

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(1568, 75)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_11by5")

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(1670, 75)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_11by5")

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(1778, 75)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_11by5")

[node name="GameOverSign" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -167.0
offset_right = 473.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.552941)

[node name="Label" type="Label" parent="GameOverSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Game Over!
Press the Start button near 
the hearts to restart."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseSign" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.552941)

[node name="Label" type="Label" parent="PauseSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Paused"

[node name="StartTouchButton" type="TouchScreenButton" parent="."]
position = Vector2(1396, 24)
texture_normal = ExtResource("9_5qqko")
shape = SubResource("CircleShape2D_wavjg")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]

[node name="AboutSign" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -605.0
offset_top = -271.0
offset_right = 195.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
color = Color(0, 0, 0, 0.796078)

[node name="RichTextLabel" type="RichTextLabel" parent="AboutSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -163.0
offset_right = 380.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
text = "                                                                                     About

This game was developed by Daniel Kovacs, in Godot 4.2.1, immediately after doing the 3D tutorial. Its original purpose was to check if I can make a 3D game (albeit a quite simple one), but I might have had too much fun with it...

Overall, it took a few days from start to finish, including testing on my much weaker laptop, and fighting with compatibility mode. I also quite repetitively tested my coffee machine in the process.

The 0.9.1 update was done the day after the initial publish, after getting some great insight from the OSSU community.

Github page:
https://github.com/MetallicCrimson"

[node name="HelpSign" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -501.0
offset_top = -526.0
offset_right = 299.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
color = Color(0, 0, 0, 0.796078)

[node name="RichTextLabel" type="RichTextLabel" parent="HelpSign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -340.0
offset_right = 380.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
text = "                                                                                   FPSnake

Are you prepared for some crazy 3D action?

You already know the rules: go around, get the apples, don't hit the wall (or yourself). What else could the classic Snake be?

Well, elevating the concept into the third dimension makes it much more. Sure, collecting apples is still the main goal, but getting into the snake's viewpoint, flying through the map, doing crazy maneuvers; these make it much more fun. Who cares about points, when you can pull a corkscrew instead?

Rules and controls:

The snake can be turned by the left stick of a controller, the arrow keys on a keyboard, moving the mouse, or dragging on the touchscreen.
You can also temporarily accelerate by hitting the A button of a controller, Space, the right mouse button, or pressing the top right accelerating button. You can also set the accelerated speed in the paused menu, but beware, very high speed can cause some bugs! (They were seldom throughout the testing, though. Mostly just leaving space between body parts, and occasionally not registering a collision.)

You have three lives, as shown in the upper right corner. Each hit comes with 2 seconds of invincibility; use it wisely!

If the apple is not on the screen, an arrow at the edge helps to locate it.

You can pause/unpause with Enter (or Start on a controller), or the Pause button on the left of the hearts."

[connection signal="value_changed" from="SpeedChange/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="StartTouchButton" to="." method="_on_start_touch_button_pressed"]
